making sure overflow hidden was added in order to prevent text from spreading across screen and requiring scrolling for app

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@
 
 body {
     background-color: #FFFFF0;
+    width:100%; 
+    overflow-x: hidden;
 }
 
 .heading {
